--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
     <h1>Jehmel C. Ofreneo</h1>
     <img src= "me.jpg" alt = "picture of me" width ="104" height ="142">
     <h2>CIT 230: Assignment Portal</h2>
-    <h3>Lesson 02: Assignment Link 
-        Lesson 03: Assignment Link 
-        Lesson 04: Link|Link
-    </h3>
+    <h3>Lesson 02: Assignment Link </h3>
+    <h3>   Lesson 03: Assignment Link </h3>
+    <h3>    Lesson 04: Link|Link</h3>
     <p>&copy;2020|Jehmel C. Ofreneo|Utah|BYUI Online Learning</p>
 <p>Last Updated:10/28/2020 22:41</p>
 </body>
