--- a/index.html
+++ b/index.html
@@ -8,10 +8,50 @@
     <title>Hello!</title>
     
     <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/style.css">
+    <!--<link rel="stylesheet" href="/style.css">-->
     
     <!-- import the webpage's javascript file -->
+    <style>
+        body {
+  font-family: helvetica, arial, sans-serif;
+  margin: 2em;
+}
+
+
+h1 {
+  font-size: 40px;
+  font-style: bold;
+  text-align: center;
+  color: lightgreen;
+  padding: 25px;
+  background-color: blue;
+  border-radius: 10px;
+}
+img{
+  float: right;
+  padding: 10px;
+}
+h2 {
+  padding: 10px;
+  border-bottom: solid;
+  border-width: 1px;
+  border-color: gray;
+}
+p {
+  font-size: 15px;
+  color: lightgreen;
+  text-align: center;
+  padding: 15px;
+  background-color: blue;
+  border-radius: 10px;
+}
+em { 
+  font-size: 10px;
+  color: yellow;
+}
+    </style>
     <script src="/script.js" defer></script>
+
   </head>  
   <body>
     <img src = "https://cdn.glitch.com/22b955c0-f87d-48cb-94fd-73c0ed0fdb9a%2Fme.jpg?v=1604029860675" alt = "Picture of Me"  width = "175" height = "200">
