--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ em {
          </a> 
        </li>
     </ul>
-    <p >&copy;2020 | Jehmel C. Ofreneo | Utah | BYUI Online Learning
+    <p >&copy;2020 | Jehmel C. Ofreneo | Philippines | BYUI Online Learning
             <br> <em>Last Updated:10/28/2020 22:41</em>
     </p>
   </body>
