--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@ em {
   font-size: 10px;
   color: yellow;
 }
+#school {
+  color: lightgreen;
+  background-color: transparent;
+}
     </style>
     <script src="/script.js" defer></script>
 
@@ -75,7 +79,7 @@ em {
          </a> 
        </li>
     </ul>
-    <p >&copy;2020 | Jehmel C. Ofreneo | Philippines | BYUI Online Learning
+    <p >&copy;2020 | Jehmel C. Ofreneo | Philippines |<a id ="school" ref = "https://www.byui.edu/online"> BYUI Online Learning </a>
             <br> <em>Last Updated:10/28/2020 22:41</em>
     </p>
   </body>
