--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ em {
          </a> 
        </li>
     </ul>
-    <p >&copy;2020 | Jehmel C. Ofreneo | Philippines |<a id ="school" ref = "https://www.byui.edu/online"> BYUI Online Learning </a>
+    <p >&copy;2020 | Jehmel C. Ofreneo | Philippines |<a id ="school" href = "https://www.byui.edu/online"> BYUI Online Learning </a>
             <br> <em>Last Updated:10/28/2020 22:41</em>
     </p>
   </body>
