--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--<link rel="stylesheet" href="/style.css">-->
     
     <!-- import the webpage's javascript file -->
-    <link rel ="stylesheet" href/main.css">
+    <link rel ="stylesheet" href="css/main.css">
     
     <script src="/script.js" defer></script>
 
