revision once again

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   </head>  
   <body>
-    <img src = "https://cdn.glitch.com/22b955c0-f87d-48cb-94fd-73c0ed0fdb9a%2Fme.jpg?v=1604029860675" alt = "Picture of Me"  width = "175" height = "200">
+    <img src = "images/me.jpg" alt = "Picture of Me"  width = "175" height = "200">
     <h1>Jehmel C. Ofreneo</h1>
     
     <h2>CIT 230: Assignment Portal</h2>
