--- a/index.html
+++ b/index.html
@@ -17,30 +17,35 @@
 
   </head>  
   <body>
-    <img src = "images/me.jpg" alt = "Picture of Me"  width = "175" height = "200">
-    <h1>Jehmel C. Ofreneo</h1>
-    
-    <h2>CIT 230: Assignment Portal</h2>
-    <ul>
-       <li>Lesson 02: 
-         <a href = "assignment2">
-              Assignment Link
-         </a> 
-       </li>
-       <li>Lesson 03: 
-         <a href = "assignment3">
-              Assignment Link 
-         </a> 
-      </li>
-       <li>Lesson 04: 
-         <a href = "assignment4">     
-              Link|Link 
-         </a> 
-       </li>
-    </ul>
-    <p >&copy;2020 | Jehmel C. Ofreneo | Philippines |<a id ="school" href = "https://www.byui.edu/online"> BYUI Online Learning </a>
-            <br> <em>Last Updated:10/28/2020 22:41</em>
-    </p>
+    <header>
+      <img src = "images/me.jpg" alt = "Picture of Me"  width = "175" height = "200">
+      <h1>Jehmel C. Ofreneo</h1>
+    </header>
+    <main>
+      <h2>CIT 230: Assignment Portal</h2>
+       <ul>
+          <li>Lesson 02: 
+            <a href = "assignment2">
+                 Assignment Link
+            </a> 
+          </li>
+          <li>Lesson 03: 
+            <a href = "assignment3">
+               Assignment Link 
+            </a> 
+          </li>
+          <li>Lesson 04: 
+            <a href = "assignment4">     
+                 Link|Link 
+            </a> 
+          </li>
+       </ul>
+    </main>
+    <footer>
+      <p >&copy;2020 | Jehmel C. Ofreneo | Philippines |<a id ="school" href = "https://www.byui.edu/online"> BYUI Online Learning </a>
+              <br> <em>Last Updated:10/28/2020 22:41</em>
+      </p>
+    </footer>
   </body>
 </html>
 
