--- a/Lesson2/design-principles.html
+++ b/Lesson2/design-principles.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Design Principle Examples - webpages were chosen to illustrate three design principles.</title>
 </head>
 <body>
     <header>
