--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Assignment Portal</title>
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <!-- import the webpage's stylesheet -->
     <!--<link rel="stylesheet" href="/style.css">-->
     
@@ -25,7 +25,7 @@
       <h2>CIT 230: Assignment Portal</h2>
        <ul>
           <li>Lesson 02: 
-            <a href = "assignment2">
+            <a id = "design principles" href = "assignment2">
                  Assignment Link
             </a> 
           </li>
