--- a/Lesson2/design-principles.html
+++ b/Lesson2/design-principles.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Design Principle Examples - webpages were chosen to illustrate three design principles.</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link rel="stylesheet" href="css/small.css">
+    <link rel="stylesheet" href="css/medium.css">
+    <link rel="stylesheet" href="css/large.css">
 </head>
 <body>
     <header>
@@ -11,21 +15,27 @@
         <h2>Jehmel C. Ofreneo</h2>
     </header>
     <main>
+        <section>
         <h3>Alignment</h3>
             <h4>Shopify</h4>
              <a id ="shopify" href = "https://www.shopify.com"> shopify.com </a>
              <img src = "lesson2/images/alignment.jpg" alt = "Alignment img"  width = "175" height = "200">
              <p>The webpage shows left aligment of text above the images. The images are aligned horizontally and the text below them are aligned with respect to the left side of the images.</p>
-        <h3>Contrast</h3>
+        </section>
+        <section>
+             <h3>Contrast</h3>
             <h4>CapRocat</h4>
               <a id ="CapRocat" href = "https://www.caprocat.com/en/en"> caprocat.com </a>
              <img src = "lesson2/images/contrast.jpg" alt = "Contrast img"  width = "175" height = "200">
              <p>The webpage shows the dark green color of the bushes on the plant boxes in contrast to the bright colors of the castle walls and the pathway towards the entrance. The white text is readable in contrast to the background.</p>
-        <h3>Repetition</h3>
+        </section>
+        <section>
+             <h3>Repetition</h3>
             <h4>CIT</h4>
              <a id ="CIT" href = "https://www.mycit.ie/#gsc.tab=0"> CIT.com </a>
              <img src = "lesson2/images/repetition.jpg" alt = "Repetition img"  width = "175" height = "200">
              <p>The size of the images as well as the text and icons in the middle of the images are consistently repeated creating a uniform look of the items displayed.</p>
+        </section>
     </main>
     <footer>
             <p >
