--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <h2>CIT 230: Assignment Portal</h2>
        <ul>
           <li>Lesson 02: 
-            <a id = "design principles" href = "assignment2">
+            <a id = "design principles" href = "lesson2/design-principles.html">
                  Assignment Link
             </a> 
           </li>
