--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -6,12 +6,50 @@
     <title>Document</title>
 </head>
 <body>
-    <header></header>
-    <nav></nav>
-    <main></main>
-    <footer></footer>
-    <script src=""></script>
+    <header>
+        <section>
+         
+            <h1>A Site Plan</h1>>
+            <h2>Jehmel C. Ofreneo || < a href = :../index.html">Assignment Portal)</a></h2>
+            <nav>
+                <ul>
+                    <li><a href ="index.html">Purpose</a></li>
+                    <li><a href ="target-audience.html">Target Audience</a></li>
+                    <li><a href ="color-scheme.html">Color Scheme</a></li>
+                    <li><a href ="typography.html">Typography</a></li>
+                </ul>
+            </nav>
+        </section>
+    </header>
+    <main>
+        <section>
+            <h3>Purpose:</h3>
+            <p>
 
-   
+            </p>
+        </section>
+        <section>
+            <h3>Domain:</h3>
+            <p>url|
+                <a href ="https://www.url.com/domains/registration/results/?domain=Site plan"
+                       target="_blank" rel="noreferrer noopener">$8.88/yr</a></p>
+            </p>
+        </section>
+        <section>
+            <h3>Site Motto</h3>
+            <p>
+
+            </p>
+        </section>
+        <section id="logobox">
+            <h3>Logo:</h3>
+            <img id="logobox" src="images/logo.png" alt="" ">"
+        </section>
+    </main>
+    <footer>
+        <p >&copy;<span id="year">2020</span> | Jehmel C. Ofreneo | Philippines | <a href="https://www.byui.edu/online">BYUI Online Learning</a></p>
+        <p id="lastUpdated">Last Updated: dd/mm/yyyy hh:mm:ss</p> 
+    </footer>
+    <script src=""></script>
 </body>
 </html>
