--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <title>Assignment Portal</title>
     <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">>
-    <!-- import the webpage's stylesheet -->
+    <!-import the webpage's stylesheet -->
     <!--<link rel="stylesheet" href="/style.css">-->
     
     <!-- import the webpage's javascript file -->
