--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <h2>CIT 230: Assignment Portal</h2>
        <ul>
           <li>Lesson 02: 
-            <a href = "/lesson2/design-principles.html">
-                 Assignment Link
+            <a href = "lesson2/design-principles.html">
+                 Design Principles
             </a> 
           </li>
           <li>Lesson 03: 
