--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- import the webpage's javascript file -->
     <link rel ="stylesheet" href="css/main.css">
     
-    <script src="/script.js" defer></script>
+     <!-- <script src="/script.js" defer></script> -->
 
   </head>  
   <body>
@@ -25,7 +25,7 @@
       <h2>CIT 230: Assignment Portal</h2>
        <ul>
           <li>Lesson 02: 
-            <a href = "lesson2/design-principles.html">
+            <a href = "design-principles.html">
                  Design Principles
             </a> 
           </li>
