--- a/Lesson2/design-principles.html
+++ b/Lesson2/design-principles.html
@@ -25,14 +25,14 @@
         <section>
              <h3>Contrast</h3>
             <h4>CapRocat</h4>
-              <a id ="CapRocat" href = "https://www.caprocat.com/en/en"> caprocat.com </a><br><br>
+              <a id ="CapRocat" href = "https://caprocat.com/en/en"> caprocat.com </a><br><br>
              <img src = "/images/contrast.jpg" alt = "Contrast img"  width = "175" height = "200">
              <p>The webpage shows the dark green color of the bushes on the plant boxes in contrast to the bright colors of the castle walls and the pathway towards the entrance. The white text is readable in contrast to the background.</p>
         </section>
         <section>
              <h3>Repetition</h3>
             <h4>CIT</h4>
-             <a id ="CIT" href = "https://www.mycit.ie/#gsc.tab=0"> CIT.com </a><br><br>
+             <a id ="CIT" href = "https://www.mycit.ie"> CIT.com </a><br><br>
              <img src = "/images/repetition.jpg" alt = "Repetition img"  width = "175" height = "200">
              <p>The size of the images as well as the text and icons in the middle of the images are consistently repeated creating a uniform look of the items displayed.</p>
         </section>
