--- a/Lesson2/design-principles.html
+++ b/Lesson2/design-principles.html
@@ -32,7 +32,7 @@
         <section>
              <h3>Repetition</h3>
             <h4>CIT</h4>
-             <a id ="CIT" href = "https://www.mycit.ie/#gsc.tab=0"> CIT.com </a><br><br>
+             <a id ="CIT" href = "http://www.mycit.ie/#gsc.tab=0"> CIT.com </a><br><br>
              <img src = "images/repetition.jpg" alt = "Repetition img"  width = "175" height = "200">
              <p>The size of the images as well as the text and icons in the middle of the images are consistently repeated creating a uniform look of the items displayed.</p>
         </section>
