--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Site Plan for Local Weather Conditions</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link rel="stylesheet" href="css/small.css">
+    <link rel="stylesheet" href="css/medium.css">
+    <link rel="stylesheet" href="css/large.css">
 </head>
 <body>
     <header>
@@ -24,8 +28,11 @@
     <main>
         <section>
             <h3>Purpose:</h3>
-            <p>
-
+            <p>The primary purpose of the web site is to provide information about the expected weather 
+        conditions within the community. The information that will be provided will serve as a guide to
+        residents as well as visitors as they make plans on their activities in the local community. The
+         website will also provide information on news and events within the community and within the 
+         regional area.
             </p>
         </section>
         <section>
@@ -37,7 +44,7 @@
         </section>
         <section>
             <h3>Site Motto</h3>
-            <p>
+            <p> "Whatever you plan, wherever you go, knowing the weather  will will be good for you.""
 
             </p>
         </section>
