--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             </a> 
           </li>
           <li>Lesson 03: 
-            <a href = "assignment3">
-               Assignment Link 
+            <a href = "lesson3/index.html">
+               Site Plan 
             </a> 
           </li>
           <li>Lesson 04: 
