--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -13,8 +13,8 @@
     <header>
         <section>
          
-            <h1>A Site Plan</h1>>
-            <h2>Jehmel C. Ofreneo || < a href = ":../index.html">Assignment Portal)</a></h2>
+            <h1>A Site Plan</h1>
+            <h2>Jehmel C. Ofreneo || <a href = ":../index.html">Assignment Portal)</a></h2>
             <nav>
                 <ul>
                     <li><a href ="index.html">Purpose</a></li>
