--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -44,7 +44,7 @@
         </section>
         <section>
             <h3>Site Motto</h3>
-            <p> "Whatever you plan, wherever you go, knowing the weather  will will be good for you.""
+            <p> "Whatever you plan, wherever you go, knowing the weather will be advantageous for you."
 
             </p>
         </section>
