--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 < head>
- < Enter here your head
- <
- <
- <
- <
- <
+ < <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <title>Site Plan for Local Weather Conditions</title>
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+ <link rel="stylesheet" href="css/small.css">
+ <link rel="stylesheet" href="css/medium.css">
+ <link rel="stylesheet" href="css/large.css">
 </head>
 <<body onload="lastUpdate()">
 <header>
