--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/medium.css">
     <link rel="stylesheet" href="css/large.css">
 </head>
-<<body onload="lastUpdate()">
+<body onload="lastUpdate()">
     <header>
         <section>
             <h1>A Site Plan</h1>
