--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-< head>
- < <meta charset="UTF-8">
+<head>
+ <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Site Plan for Local Weather Conditions</title>
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
@@ -9,7 +9,7 @@
  <link rel="stylesheet" href="css/medium.css">
  <link rel="stylesheet" href="css/large.css">
 </head>
-<<body onload="lastUpdate()">
+<body onload="lastUpdate()">
 <header>
     <section>
         <h1>A Site Plan</h1>
