--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -27,7 +27,7 @@
 <main>
     <section id="typography">
         <h3>Typography:</h3>
-        <table>
+        <table id = "fonts">
             <tbody id="texttable">
                 <tr>
                     <td>Site Header</td>
