--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -27,7 +27,7 @@
     <main>
         <section>
             <h3>Color Scheme:</h3>
-            <table>
+            <table class = "colors">
                 <tbody id="colortable">
                     <tr>
                         <td class="primarycolor">Primary</td>
