--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -8,18 +8,19 @@
     <link rel="stylesheet" href="css/small.css">
     <link rel="stylesheet" href="css/medium.css">
     <link rel="stylesheet" href="css/large.css">
+    <script>c="/script.js" defer></script> 
 </head>
 <body>
     <header>
         <section>
          
-            <h1>A Site Plan</h1>
+            <h1>Our Community Weather</h1>
             <h2>Jehmel C. Ofreneo || <a href = "../index.html">Assignment Portal)</a></h2>
             <nav>
                 <ul>
                     <li><a href ="index.html">Purpose</a></li>
                     <li><a href ="target-audience.html">Target Audience</a></li>
-                    <li><a href ="color-scheme.html">Color Scheme</a></li>
+                    <li><a href ="color-scheme.html">Color Scheme</a></li>"
                     <li><a href ="typography.html">Typography</a></li>
                 </ul>
             </nav>
@@ -37,9 +38,9 @@
         </section>
         <section>
             <h3>Domain:</h3>
-            <p>url|
+            <p>www.SimplyOurPlace.com|
                 <a href ="https://www.url.com/domains/registration/results/?domain=Site plan"
-                       target="_blank" rel="noreferrer noopener">$8.88/yr</a></p>
+                       target="_blank" rel="noreferrer noopener">$10.50/yr</a></p>
             </p>
         </section>
         <section>
@@ -54,9 +55,10 @@
         </section>
     </main>
     <footer>
-        <p >&copy;<span id="year">2020</span> | Jehmel C. Ofreneo | Philippines | <a href="https://www.byui.edu/online">BYUI Online Learning</a></p>
-        <p id="lastUpdated">Last Updated: dd/mm/yyyy hh:mm:ss</p> 
+        <p >&copy;<span id="year">2020</span> | Jehmel C. Ofreneo | Philippines | <a href="https://www.byui.edu/online">BYUI Online Learning</a>
+          <br> <em id="lastModified">Last Updated:mm/dd/yyyy hh:mm</em>
+        </p>
     </footer>
-    <script src=""></script>
+    <script src="js.lastModified.js"></script>
 </body>
 </html>
