--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -55,7 +55,7 @@
         </section>
     </main>
     <footer>
-        <p >&copy;<span id="year">2020</span> | Jehmel C. Ofreneo | Philippines | <a href="https://www.byui.edu/online">BYUI Online Learning</a>
+        <p>&copy;2020| Jehmel C. Ofreneo | Philippines | <a id="school" href="https://www.byui.edu/online">BYUI Online Learning</a>
           <br> <em id="lastModified">Last Updated:mm/dd/yyyy hh:mm</em>
         </p>
     </footer>
