--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -82,8 +82,11 @@
     </section>
  </main>
  <footer>
-    <p >&copy;<span id="year">2020</span> | Jehmel C. Ofreneo | Philippines | <a href="https://www.byui.edu/online">BYUI Online Learning</a></p>
+    <p>&copy;2020| Jehmel C. Ofreneo | Philippines | <a id="school" href="https://www.byui.edu/online">BYUI Online Learning</a>
+        <br> <em id="lastModified">Last Updated:mm/dd/yyyy hh:mm</em>
+      </p>
     <p id="lastUpdated">Last Updated: dd/mm/yyyy hh:mm:ss</p>
-</footer>
+    </footer>
+    <script src="js.lastModified.js"></script>
  </body>
 </html>
