--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/small.css">
     <link rel="stylesheet" href="css/medium.css">
     <link rel="stylesheet" href="css/large.css">
-    <script>c="/script.js" defer></script> 
+    <script src="/script.js" defer></script> 
 </head>
 <body>
     <header>
