--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -20,7 +20,7 @@
                 <ul>
                     <li><a href ="index.html">Purpose</a></li>
                     <li><a href ="target-audience.html">Target Audience</a></li>
-                    <li><a href ="color-scheme.html">Color Scheme</a></li>"
+                    <li><a hef ="color-scheme.html">Color Scheme</a></li>
                     <li><a href ="typography.html">Typography</a></li>
                 </ul>
             </nav>
@@ -39,8 +39,7 @@
         <section>
             <h3>Domain:</h3>
             <p>www.SimplyOurPlace.com|
-                <a href ="https://www.url.com/domains/registration/results/?domain=Site plan"
-                       target="_blank" rel="noreferrer noopener">$10.50/yr</a></p>
+                <a href ="https://www.url.com/domains/registration/results/?domain=Site plan"target="_blank" rel="noreferrer noopener">$10.50/yr</a>
             </p>
         </section>
         <section>
@@ -51,7 +50,7 @@
         </section>
         <section id="logobox">
             <h3>Logo:</h3>
-            <img id="logobox" src="images/logo.png" alt="" ">"
+            <img src="images/logo.png" alt="logo image">"
         </section>
     </main>
     <footer>
