--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -20,7 +20,7 @@
                 <ul>
                     <li><a href ="index.html">Purpose</a></li>
                     <li><a href ="target-audience.html">Target Audience</a></li>
-                    <li><a hef ="color-scheme.html">Color Scheme</a></li>
+                    <li><a href ="color-scheme.html">Color Scheme</a></li>
                     <li><a href ="typography.html">Typography</a></li>
                 </ul>
             </nav>
@@ -39,7 +39,7 @@
         <section>
             <h3>Domain:</h3>
             <p>www.SimplyOurPlace.com|
-                <a href ="https://www.url.com/domains/registration/results/?domain=Site plan"target="_blank" rel="noreferrer noopener">$10.50/yr</a>
+                <a href ="https://www.url.com/domains/registration/results/?domain=Site plan" target="_blank" rel="noreferrer noopener">$10.50/yr</a>
             </p>
         </section>
         <section>
