--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -40,11 +40,11 @@
 <p> Dorothy Chan is 29 years old, unmarried and a business woman who loves to travel around and visit different places. She has a lot of relatives scattered around the country and she makes sure to visit them when she is around their places. She dislikes traveling in bad weather conditions unless she really has to do it.</p>
 <h4>Senarios:</h4>
 <ul>
-<li> Jose wakes up early on a Monday morning. While eating breakfast, he browses the internet for the local news and the weather. He is glad that the weather will be fine for the week and decides to leave early with the children so that he will be early for work. </li>
-<li> The weather is stormy. Jose decides to work the whole day at the office and he cancels his planned visit  on the sites of two projects he is presently supervising.</li>
-<li> Dorothy postpones her visit to the place because she found out through the internet of repairs being done on the main highway due to a flood that was caused by continuous heavy rain during the past two days.</li>
-<li> Jose tells her wife to go to the market because a storm was due to come within two days. She has to buy enough food to last for a week after which the storm would have already left.</li>
-<li> Dorothy finds out while browsing the phone that a coming event that businessmen will be gathering at a local hotel venue. Since the weather will be fine for the whole week, she plans to come a day early to attend the meeting to visit with some close friends who will be part of the event.
+<li class = "varr"> Jose wakes up early on a Monday morning. While eating breakfast, he browses the internet for the local news and the weather. He is glad that the weather will be fine for the week and decides to leave early with the children so that he will be early for work. </li>
+<li class = "varr"> The weather is stormy. Jose decides to work the whole day at the office and he cancels his planned visit  on the sites of two projects he is presently supervising.</li>
+<li class = "varr"> Dorothy postpones her visit to the place because she found out through the internet of repairs being done on the main highway due to a flood that was caused by continuous heavy rain during the past two days.</li>
+<li class = "varr"> Jose tells her wife to go to the market because a storm was due to come within two days. She has to buy enough food to last for a week after which the storm would have already left.</li>
+<li class = "varr"> Dorothy finds out while browsing the phone that a coming event that businessmen will be gathering at a local hotel venue. Since the weather will be fine for the whole week, she plans to come a day early to attend the meeting to visit with some close friends who will be part of the event.
 </li>
 </ul>
 </section>
