--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -32,10 +32,10 @@
 <section id="personasbox">
 <h3>Personas:</h3>
 <section id="name of the persona">
-<img id="engimg" src="images/engineer.jpg" alt=" Engineer ">
+<img id="engimg" src="images/engineer.jpg" alt=" Engineer " width = "400" height = "600">
 <h4>Jose Vargas</h4>
 <p> Jose Vargas is 42 years old and a civil engineer as well as a family man. He has two sons in senior high school and one daughter in junior high, and one in the elementary. Before going to work, he needs to drop off his kids at their respective schools. His wife stays home most of the time but has to schedule her time to go pay the bills, go to buy food at the local market or the mall to make purchases for supplies needed for the home. She avoids going out when the weather is rainy or stormy.</p>
-<img id="busimg" src="images/businesswoman.jpg" alt=" Businesswoman ">
+<img id="busimg" src="images/businesswoman.jpg" alt=" Businesswoman " width = "400" height = "600">
 <h4>Dorothy Chan</h4>
 <p> Dorothy Chan is 29 years old, unmarried and a business woman who loves to travel around and visit different places. She has a lot of relatives scattered around the country and she makes sure to visit them when she is around their places. She dislikes traveling in bad weather conditions unless she really has to do it.</p>
 <h4>Senarios:</h4>
