--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -49,7 +49,7 @@
         </section>
         <section id="logobox">
             <h3>Logo:</h3>
-            <img src="images/logo.png" alt="logo image" width = "175" height = "200">"
+            <img src="images/logo.png" alt="logo image" width = "100" height = "150">
         </section>
     </main>
     <footer>
