--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -31,7 +31,7 @@
 </section>
 <section id="personasbox">
 <h3>Personas:</h3>
-<section id="name of the persona">
+<section id="nameOfthePersona">
 <img id="engimg" src="images/engineer.jpg" alt=" Engineer " width = "350" height = "375">
 <h4>Jose Vargas</h4>
 <p> Jose Vargas is 42 years old and a civil engineer as well as a family man. He has two sons in senior high school and one daughter in junior high, and one in the elementary. Before going to work, he needs to drop off his kids at their respective schools. His wife stays home most of the time but has to schedule her time to go pay the bills, go to buy food at the local market or the mall to make purchases for supplies needed for the home. She avoids going out when the weather is rainy or stormy.</p>
@@ -44,10 +44,11 @@
 <li class = "varr"> The weather is stormy. Jose decides to work the whole day at the office and he cancels his planned visit  on the sites of two projects he is presently supervising.</li>
 <li class = "varr"> Dorothy postpones her visit to the place because she found out through the internet of repairs being done on the main highway due to a flood that was caused by continuous heavy rain during the past two days.</li>
 <li class = "varr"> Jose tells her wife to go to the market because a storm was due to come within two days. She has to buy enough food to last for a week after which the storm would have already left.</li>
-<li class = "varr"> Dorothy finds out while browsing the phone that a coming event that businessmen will be gathering at a local hotel venue. Since the weather will be fine for the whole week, she plans to come a day early to attend the meeting to visit with some close friends who will be part of the event.
-</li>
+<li class = "varr"> Dorothy finds out while browsing the phone that a coming event that businessmen will be gathering at a local hotel venue. Since the weather will be fine for the whole week, she plans to come a day early to attend the meeting to visit with some close friends who will be part of the event.</li>
 </ul>
 </section>
+</section>
+</main>
 <footer>
 <p>&copy;2020| Jehmel C. Ofreneo | Philippines | <a id="school" href="https://www.byui.edu/online">BYUI Online Learning</a>
     <br> <em id="lastModified">Last Updated:mm/dd/yyyy hh:mm</em>
