--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/small.css">
     <link rel="stylesheet" href="css/medium.css">
     <link rel="stylesheet" href="css/large.css">
-    <script src="/script.js" defer></script> 
+    <script src="js/lastModified.js" defer></script> 
 </head>
 <body>
     <header>
@@ -57,6 +57,6 @@
           <br> <em id="lastModified">Last Updated:mm/dd/yyyy hh:mm</em>
         </p>
     </footer>
-    <script src="js.lastModified.js"></script>
+    <script src="js/lastModified.js"></script>
 </body>
 </html>
