--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="css/small.css">
 <link rel="stylesheet" href="css/medium.css">
 <link rel="stylesheet" href="css/large.css">
+<script src="js/lastModified.js" defer></script> 
 </head>
 <body onload="lastUpdate()">
 <header>
