--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -40,7 +40,7 @@
     <h4>Dorothy Chan</h4>
        <p> Dorothy Chan is 29 years old, unmarried and a business woman who loves to travel around and visit different places. She has a lot of relatives scattered around the country and she makes sure to visit them when she is around their places. She dislikes traveling in bad weather conditions unless she really has to do it.</p>
     <h4>Senarios:</h4>
-     <ul>
+     <ul class = "block">
       <li class = "varr"> Jose wakes up early on a Monday morning. While eating breakfast, he browses the internet for the local news and the weather. He is glad that the weather will be fine for the week and decides to leave early with the children so that he will be early for work. </li>
       <li class = "varr"> The weather is stormy. Jose decides to work the whole day at the office and he cancels his planned visit  on the sites of two projects he is presently supervising.</li>
       <li class = "varr"> Dorothy postpones her visit to the place because she found out through the internet of repairs being done on the main highway due to a flood that was caused by continuous heavy rain during the past two days.</li>
