--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             </a> 
           </li>
           <li>Lesson 04: 
-            <a href = "assignment4">     
-                 Link|Link 
+            <a href = "lesson4/preston-4.html">     
+                 Preston 
             </a> 
           </li>
        </ul>
