--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -87,6 +87,6 @@
         <br> <em id="lastModified">Last Updated:mm/dd/yyyy hh:mm</em>
     </p>
  </footer>
-    <script src="js.lastModified.js"></script>
+    <script src="js/lastModified.js"></script>
  </body>
 </html>
