--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -55,6 +55,6 @@
     <br> <em id="lastModified">Last Updated:mm/dd/yyyy hh:mm</em>
   </p>
 </footer>
-<script src="js.lastModified.js"></script>
+<script src="js/lastModified.js"></script>
 </body>
 </html>
