--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -15,7 +15,7 @@
         <section>
          
             <h1>Our Community Weather</h1>
-            <h2>Jehmel C. Ofreneo || <a href = "../index.html">Assignment Portal)</a></h2>
+            <h2>Jehmel C. Ofreneo || <a href = "../index.html">Assignment Portal</a></h2>
             <nav>
                 <ul>
                     <li><a href ="index.html">Purpose</a></li>
