--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -14,7 +14,7 @@
     <header>
         <section>
          <img id="headerlogo" src="images/logo.png" alt="logo" />
-            <h2>Whatever you plan, wherever you go, knowing the weather is a must for you.</h2>
+            <h1>Our Community Weather</h1>
             <nav>
                 <ul class="navigation">
                     <li id="ham"><a onclick="toggleMenu()" href="#">&#9776; Menu</a></li>
