--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <section class = "weather">
+        <section>
          <img id="headerlogo" src="images/logo.png" alt="logo" />
             <h1>Our Community Weather</h1>
             <nav>
