--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
                  Preston 
             </a> 
           </li>
+          <li>Lesson 04: 
+            <a href = "lesson4/preston-5.html">     
+                 Preston 
+            </a> 
+          </li>
        </ul>
     </main>
     <footer>
