--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
           </li>
           <li>Lesson 04: 
             <a href = "lesson4/preston-4.html">     
-                 Preston 
+                 Preston 4
             </a> 
           </li>
           <li>Lesson 05: 
-            <a href = "lesson4/preston-5.html">     
-                 Preston 
+            <a href = "lesson5/preston-5.html">     
+                 Preston 5
             </a> 
           </li>
        </ul>
