--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -31,7 +31,7 @@
     <main>
         <h2>Preston Idaho</h2>
             <div>
-                <div class="banner-img"><img src="images/preston.jpg" alt="mountains"></div>
+                <div class="banner-img"><img src="images/prestonmtn.jpg" alt="mountains"></div>
                 <div id="overlay">
                     <h2 class="weatherhead"><u>Weather Summary</u></h2>
                     <div class="weatherinfo">Currently: Sunny</div>
@@ -67,7 +67,7 @@
                 </table>
             </div>
             <div class="article">
-                <img class="news-img" src="images/pexels-julia-volk-5110958.jpg" alt="valleyview">
+                <img class="news-img" src="images/valleyview.jpg" alt="valleyview">
                 <p>Lorem ipsum dolor sit amet,consectetur adipiscing elit.
                     Nulla consectetur justo eu nunc ultricies, at bibendum dolor
                     volutpat. Aliquam ornare lectus eget libero pretium, in
