--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -31,7 +31,7 @@
     <main>
         <h2>Preston Idaho</h2>
             <div>
-                <div class="banner-img"><img src="images/prestonmtn1.jpg" alt="mountains"></div>
+                <div class="banner-img"><img src="images/prestonmtn.jpg" alt="mountains"></div>
                 <div id="overlay">
                     <h2 class="weatherhead"><u>Weather Summary</u></h2>
                     <div class="weatherinfo">Currently: Sunny</div>
