--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -30,7 +30,7 @@
     </header>
     <main>
         <h2>Preston Idaho</h2>
-            <div>
+            <div class = "herodiv">
                 <div class="banner-img"><img src="images/prestonmtn.jpg" alt="mountains"></div>
                 <div id="overlay">
                     <h2 class="weatherhead"><u>Weather Summary</u></h2>
