--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -15,6 +15,7 @@
         <section>
          <img id="headerlogo" src="images/logo.png" alt="logo" />
             <h2>Our Community Weather</h2>
+            <h3>"Whatever you plan, wherever you go, knowing the weather is a must for you."</h3>
             <nav>
                 <ul class="navigation">
                     <li id="ham"><a onclick="toggleMenu()" href="#">&#9776; Menu</a></li>
