--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -32,7 +32,7 @@
     <main>
         <h2>Preston Idaho</h2>
             <div class = "herodiv">
-                <div class="banner-img"><img src="images/prestonmtn.jpg" alt="mountains"></div>
+                <div class="banner-img"><img src="images/prestonmtn.jpg" alt="mountains" width= "600" height="400"></div>
                 <div id="overlay">
                     <h2 class="weatherhead"><u>Weather Summary</u></h2>
                     <div class="weatherinfo">Currently: Sunny</div>
