--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -69,10 +69,9 @@
             </div>
             <div class="article">
                 <img class="news-img" src="images/valleyview.jpg" alt="valleyview">
-                <p>Lorem ipsum dolor sit amet,consectetur adipiscing elit.
-                    Nulla consectetur justo eu nunc ultricies, at bibendum dolor
-                    volutpat. Aliquam ornare lectus eget libero pretium, in
-                    cursus nulla consectetur. Morbi eu condimentum urna.
+                <h3>Preston girls fall in overtime to Sugar-Salem</h3>
+                <p>An impressive comeback gave Preston a fighting chance against 3A power Sugar-Salem, but the Diggers regrouped just enough in overtime. The Indians trailed by 15 points heading into the fourth quarter, but outscored the Diggers 16-1 to force overtime. Visiting Sugar-Salem scored the winning points with less than 25 seconds remaining in OT to hold off Preston, 63-62, on Wednesday afternoon.
+
                 </p>
 
             </div>
