--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -46,7 +46,7 @@
                     <div class="weatherinfo">Wind Speed: 5 mph</div>
                 </div>
             </div>
-            <div>
+            <div class="temperature">
                 <h2>Temperature Forecast</h2>
                 <table>
                     <tr>
